# crewd

./: .replit  app.py  config.py  forms.py  manage.py  models.py  pyproject.toml  utils.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1744109814329.txt
core/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
crewd/: db.sqlite3
crewd/accounts/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
crewd/accounts/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_role.py  0002_alter_user_role.py  0003_userprofile_delete_user.py
crewd/crewd/: asgi.py  settings.py  urls.py  wsgi.py
crewd/projects/: dashboard_views.py  forms.py  models.py  urls.py  views.py
crewd/projects/migrations/: 0001_initial.py  0002_group_invitation_message_projectmembership_and_more.py  0003_alter_message_options_and_more.py  0003_remove_message_recipient_remove_project_members_and_more.py  0004_auto_20250408_1137.py
crewd/static/css/: animations.css
crewd/templates/: base.html  dashboard_base.html  index.html  index_standalone.html
crewd/templates/accounts/: auth.html  login.html  profile.html  register.html  role_selection.html
crewd/templates/dashboard/: applicant_dashboard.html  applications_list.html  base.html  group_chat.html  (+17 more)
templates/: application_form.html  application_list.html  auth.html  dashboard_applicant.html  dashboard_company.html  dashboard_leader.html  index.html  layout.html  profile.html  project_create.html  project_list.html  project_view.html  role_selection.html
(+13 files in other folders)
