[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
    "django-crispy-forms>=2.3",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
